# md2atxt

./: .gitignore  pyproject.toml
Documentation/: md2anki.1.md  md2anki.al.5.md  md2anki.md.5.md  md2anki.txt.5.md  md2atxt.1.md  md2atxt.md.5.md
scripts/: docgen.py
src/md2anki/: cli.py  conversion.py  link.py
src/md2atxt/: cli.py  conversion.py  link.py
tests/: conftest.py  md2atxt.txt.expected  test-01.al.expected  test-01.md  test-02.al.expected  test-02.md  test-03.al.expected  test-03.md  test-04.md  test-05.md  test-06.md  test_cli.py  test_conversion.py  test_link.py
