[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "md2atxt"
dynamic = [ "version" ]
authors = [
  { name="Timo Früh", email="dev@tifrueh.ch" },
]
description = "Convert markdown notes to anki notes"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]

[project.urls]
Homepage = "https://github.com/tifrueh/md2atxt"
Issues = "https://github.com/tifrueh/md2atxt/issues"

[project.scripts]
md2atxt = "md2atxt:cli.main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/md2atxt/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/md2atxt"]

[tool.hatch.build.hooks.custom]
path = "scripts/docgen.py"
